--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
     <div id="container">
         <div id="image-container">
-            <img src="./images/main.jpeg" alt="Image" class="image">
-            <a href="#" class="myButton">3д тур</a>
+            <img src="./images/main.jpeg" alt="Image" class="image" >
+            <a href="panorama.html" title="Перейти в 3д тур">
+                <div class="highlight-overlay animated"></div>
+            </a>
+            <!-- <a href="#" class="myButton">3д тур</a> -->
         </div>
     </div>
     <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
